CHANGED: Layout more distance between sliders FIXED: Bottom of x-Axis Labels were cut off

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@
 .range {
   margin-left:7%;
   width:82%;
+  margin-bottom: 1em;
 }
